--- a/website/templates/backgrounds.html
+++ b/website/templates/backgrounds.html
@@ -42,8 +42,8 @@
 		</table>
 		{% if cruleset.userid == user.id %}
 		<div class="interior flex horizontal center">
-			<a href="/Character/Backgrounds/Create"><button>Create A Background</button></a>
-			<a href="{{ url_for('epchar.importBackgrounds') }}"><button>Import from JSON</button></a>
+			<a href="{{ url_for('epchar.createBackground', ruleset=cruleset.identifier) }}"><button>Create A Background</button></a>
+			<a href="{{ url_for('epchar.importBackgrounds', ruleset=cruleset.identifier) }}"><button>Import from JSON</button></a>
 		</div>
 		{% endif %}
 	</div>
