--- a/website/templates/race.html
+++ b/website/templates/race.html
@@ -30,9 +30,9 @@
         {% endif %}
         {% if cruleset.userid == current_user.id %}
         <div class="interior flex horizontal center">
-            <a href="/Character/Races/Edit/{{ race.name }}"><button type="button">Edit {{ race.name }}</button></a>
-            <a href="/Character/Races/Duplicate/{{ race.name }}"><button type="button">Duplicate {{ race.name }}</button></a>
-            <a href="/Character/Races/Delete/{{ race.name }}"><button type="button" class="mild danger">Delete {{ race.name }}</button></a>
+            <a href="{{ url_for('eprefs.editRace', race=race.name, ruleset=cruleset.identifier) }}"><button type="button">Edit {{ race.name }}</button></a>
+            <a href="{{ url_for('eprefs.duplicateRace', race=race.name, ruleset=cruleset.identifier) }}"><button type="button">Duplicate {{ race.name }}</button></a>
+            <a href="{{ url_for('eprefs.deleteRace', race=race.name, ruleset=cruleset.identifier) }}"><button type="button" class="mild danger">Delete {{ race.name }}</button></a>
         </div>
         {% endif %}
     </div>
