--- a/website/templates/create-item.html
+++ b/website/templates/create-item.html
@@ -43,7 +43,7 @@
 			{% if not cruleset.item_tags %}
 				<div class="mild danger">
 					<h3>Hey!</h3>
-					<p>You don't have any item tags in this ruleset! Without adding any, you won't be able to assign tags to this item. You can create item tags <a href="{{ url_for('eprefs.createTag') }}">here</a>.</p>
+					<p>You don't have any item tags in this ruleset! Without adding any, you won't be able to assign tags to this item. You can create item tags <a href="{{ url_for('eprefs.createTag', ruleset=cruleset.identifier) }}">here</a>.</p>
 				</div>
 				<div style="height: 30px"></div>
 			{% else %}
@@ -67,7 +67,7 @@
 			{% if not cruleset.item_properties %}
 				<div class="mild danger" x-show="isweapon">
 					<h3>Hey!</h3>
-					<p>You don't have any weapon properties in this ruleset! Without adding any, you won't be able to assign properties to this weapon. You can create weapon properties <a href="{{ url_for('eprefs.createProperty') }}">here</a>.</p>
+					<p>You don't have any weapon properties in this ruleset! Without adding any, you won't be able to assign properties to this weapon. You can create weapon properties <a href="{{ url_for('eprefs.createProperty', ruleset=cruleset.identifier) }}">here</a>.</p>
 				</div>
 			{% else %}
 				<div class="interior flex horizontal start" style="background-color: var(--nord-inactive); width: 100%; padding: 0px 12px; margin: 12px 0px" x-show="isweapon">
