--- a/website/templates/create-race.html
+++ b/website/templates/create-race.html
@@ -19,7 +19,7 @@
 			{% if not cruleset.ability_scores %}
 			<div class="mild danger">
 				<h3>Hey!</h3>
-				<p>You don't have any ability scores in this ruleset! Without adding any, you won't be able to specify ability score improvements for this race. You can create ability scores <a href="{{ url_for('epchar.createStat') }}">here</a>.</p>
+				<p>You don't have any ability scores in this ruleset! Without adding any, you won't be able to specify ability score improvements for this race. You can create ability scores <a href="{{ url_for('epchar.createStat', ruleset=cruleset.identifier) }}">here</a>.</p>
 			</div>
 			{% endif %}
 			<div class="interior flex horizontal center" x-show="!asi_override" style="width: 100%">
