--- a/website/templates/create-skill.html
+++ b/website/templates/create-skill.html
@@ -17,7 +17,7 @@
             {% if not cruleset.ability_scores %}
                 <div class="mild danger">
                     <h3>Hey!</h3>
-					<p>You don't have any ability scores in this ruleset! Without adding any, you won't be able to specify the ability score used by this background. You can create ability scores <a href="{{ url_for('epchar.createStat') }}">here</a>.</p>
+					<p>You don't have any ability scores in this ruleset! Without adding any, you won't be able to specify the ability score used by this background. You can create ability scores <a href="{{ url_for('epchar.createStat', ruleset=cruleset.identifier) }}">here</a>.</p>
                 </div>
                 <div style="height: 30px"></div>
             {% endif %}
