--- a/website/templates/feats.html
+++ b/website/templates/feats.html
@@ -35,8 +35,8 @@
 		</table>
 		{% if cruleset.userid == user.id %}
 		<div class="interior flex horizontal center">
-			<a href="/Character/Feats/Create"><button>Create A Feat</button></a>
-			<a href="{{ url_for('epchar.importFeats') }}"><button>Import from JSON</button></a>
+			<a href="{{ url_for('epchar.createFeat', ruleset=cruleset.identifier) }}"><button>Create A Feat</button></a>
+			<a href="{{ url_for('epchar.importFeats', ruleset=cruleset.identifier) }}"><button>Import from JSON</button></a>
 		</div>
 		{% endif %}
 	</div>
