--- a/website/templates/items.html
+++ b/website/templates/items.html
@@ -61,8 +61,8 @@
 		</table>
 		{% if cruleset.userid == user.id %}
 		<div class="interior flex horizontal center">
-			<a href="/Reference/Items/Create"><button>Create An Item</button></a>
-			<a href="{{ url_for('eprefs.importItems') }}"><button>Import from JSON</button></a>
+			<a href="{{ url_for('eprefs.createItem', ruleset=cruleset.identifier) }}"><button>Create An Item</button></a>
+			<a href="{{ url_for('eprefs.importItems', ruleset=cruleset.identifier) }}"><button>Import from JSON</button></a>
 		</div>
 		{% endif %}
 	</div>
