--- a/website/templates/languages.html
+++ b/website/templates/languages.html
@@ -13,9 +13,9 @@
 			<h2 x-text="`{{ language.name }}`"></h2>
 			{% if cruleset.userid == current_user.id %}
 				<div>
-					<a href="/Reference/Languages/Edit/{{ language.name }}"><button style="width: auto">Edit {{ language.name }}</button></a>
-					<a href="/Reference/Languages/Duplicate/{{ language.name }}"><button style="width: auto">Duplicate {{ language.name }}</button></a>
-					<a href="/Reference/Languages/Delete/{{ language.name }}"><button class="mild danger" style="width: auto">Delete {{ language.name }}</button></a>
+					<a href="{{ url_for('eprefs.editLanguage', language=language.name, ruleset=cruleset.identifier) }}"><button style="width: auto">Edit {{ language.name }}</button></a>
+					<a href="{{ url_for('eprefs.duplicateLanguage', language=language.name, ruleset=cruleset.identifier) }}"><button style="width: auto">Duplicate {{ language.name }}</button></a>
+					<a href="{{ url_for('eprefs.deleeLanguage', language=language.name, ruleset=cruleset.identifier) }}"><button class="mild danger" style="width: auto">Delete {{ language.name }}</button></a>
 				</div>
 			{% endif %}
 			<hr>
@@ -23,8 +23,8 @@
 		</div>
 		{% endfor %}
 		<div class="interior flex horizontal center">
-			<a href="/Reference/Languages/Create"><button>Create Language</button></a>
-			<a href="{{ url_for('eprefs.importLanguages') }}"><button>Import From JSON</button></a>
+			<a href="{{ url_for('eprefs.createLanguage', ruleset=cruleset.identifier) }}"><button>Create Language</button></a>
+			<a href="{{ url_for('eprefs.importLanguages', ruleset=cruleset.identifier) }}"><button>Import From JSON</button></a>
 		</div>
 	</div>
 </div>
