--- a/website/templates/recipes.html
+++ b/website/templates/recipes.html
@@ -15,7 +15,7 @@
 			<div x-html="convert(`{{ recipe.text }}`)"></div>
 		</div>
 		{% endfor %}
-		<a href="/Reference/Recipes/Create"><button>Create Recipe</button></a>
+		<a href="{{ url_for('eprefs.createRecipe', ruleset=cruleset.identifier) }}"><button>Create Recipe</button></a>
 	</div>
 </div>
 
