--- a/website/templates/rules.html
+++ b/website/templates/rules.html
@@ -12,8 +12,8 @@
 			<p>{{ rule.text }}</p>
 		{% endfor %}
 		{% if cruleset.userid == current_user.id %}
-			<a href="/Rules/Create"><button>Create a Rule</button></a>
-			<a href="/Rules/Create-Category"><button>Create Rule Category</button></a>
+			<a href="{{ url_for('eprule.createRule', ruleset=cruleset.identifier) }}"><button>Create a Rule</button></a>
+			<a href="{{ url_for('eprule.createCategory', ruleset=cruleset.identifier) }}"><button>Create Rule Category</button></a>
 		{% endif %}
 	</div>
 </div>
