--- a/website/templates/spells.html
+++ b/website/templates/spells.html
@@ -87,8 +87,8 @@
 		</table>
 		{% if cruleset.userid == user.id %}
 		<div class="interior flex horizontal center">
-			<a href="/Reference/Spells/Create"><button>Create A Spell</button></a>
-			<a href="{{ url_for('eprefs.importSpells') }}"><button>Import from JSON</button></a>
+			<a href="{{ url_for('eprefs.createSpell', ruleset=cruleset.identifier) }}"><button>Create A Spell</button></a>
+			<a href="{{ url_for('eprefs.importSpells', ruleset=cruleset.identifier) }}"><button>Import from JSON</button></a>
 		</div>
 		{% endif %}
 	</div>
