--- a/website/templates/unfinished.html
+++ b/website/templates/unfinished.html
@@ -6,7 +6,7 @@
 		<h1>Page Under Construction</h1>
 		<img src="https://cdn.betterttv.net/emote/609375b139b5010444d0c761/3x" style="max-width: 512px; width: 100%; border-radius: 10px; margin: 50px 150px 50px 150px;">
 		<p>This page isn't finished yet. Come back soon when it's done!</p>
-		<button onclick="window.location.href='/'">Return Home</button>
+		<a style="width: auto" href="{{ url_for('epmain.home', ruleset=cruleset.identifier) }}"><button>Return Home</button></a>
 	</div>
 </div>
 
