--- a/website/templates/feats.html
+++ b/website/templates/feats.html
@@ -33,7 +33,7 @@
 				</tr>
 			</template>
 		</table>
-		{% if cruleset.userid == user.id %}
+		{% if cruleset.userid == current_user.id %}
 		<div class="interior flex horizontal center">
 			<a href="{{ url_for('epchar.createFeat', ruleset=cruleset.identifier) }}"><button>Create A Feat</button></a>
 			<a href="{{ url_for('epchar.importFeats', ruleset=cruleset.identifier) }}"><button>Import from JSON</button></a>
