--- a/website/templates/items.html
+++ b/website/templates/items.html
@@ -59,7 +59,7 @@
 				</tr>
 			</template>
 		</table>
-		{% if cruleset.userid == user.id %}
+		{% if cruleset.userid == current_user.id %}
 		<div class="interior flex horizontal center">
 			<a href="{{ url_for('eprefs.createItem', ruleset=cruleset.identifier) }}"><button>Create An Item</button></a>
 			<a href="{{ url_for('eprefs.importItems', ruleset=cruleset.identifier) }}"><button>Import from JSON</button></a>
