--- a/website/templates/properties.html
+++ b/website/templates/properties.html
@@ -13,9 +13,9 @@
 			<h2>{{ property.name }}</h2>
 			{% if cruleset.userid == current_user.id %}
 				<div>
-					<a href="{{ url_for('eprefs.editProperty', ruleset=cruleset.identifier) }}"><button style="width: auto">Edit {{ property.name }}</button></a>
-					<a href="{{ url_for('eprefs.duplicateProperty', ruleset=cruleset.identifier) }}"><button style="width: auto">Duplicate {{ property.name }}</button></a>
-					<a href="{{ url_for('eprefs.deleteProperty', ruleset=cruleset.identifier) }}"><button class="mild danger" style="width: auto">Delete {{ property.name }}</button></a>
+					<a href="{{ url_for('eprefs.editProperty', ruleset=cruleset.identifier, item=property.name) }}"><button style="width: auto">Edit {{ property.name }}</button></a>
+					<a href="{{ url_for('eprefs.duplicateProperty', ruleset=cruleset.identifier, item=property.name) }}"><button style="width: auto">Duplicate {{ property.name }}</button></a>
+					<a href="{{ url_for('eprefs.deleteProperty', ruleset=cruleset.identifier, item=property.name) }}"><button class="mild danger" style="width: auto">Delete {{ property.name }}</button></a>
 				</div>
 			{% endif %}
 			<hr>
