--- a/website/templates/races.html
+++ b/website/templates/races.html
@@ -54,7 +54,7 @@
 				</tr>
 			</template>
 		</table>
-		{% if cruleset.userid == user.id %}
+		{% if cruleset.userid == current_user.id %}
 		<div class="interior flex horizontal center">
 			<a href="{{ url_for('epchar.createRace', ruleset=cruleset.identifier) }}"><button>Create A Race</button></a>
 			<a href="{{ url_for('epchar.importRaces', ruleset=cruleset.identifier) }}"><button>Import from JSON</button></a>
