--- a/website/static/css/containers.css
+++ b/website/static/css/containers.css
@@ -48,7 +48,8 @@
 }
 
 .flex.wide {
-    width: calc(100% - 100px)
+    width: calc(100% - 100px);
+    max-width: 1920px
 }
 
 .flex.narrow {
@@ -90,6 +91,7 @@
 
 div.interior {
     width: auto;
+    max-width: 100%;
     margin: 0;
     padding: 0;
 }
