added export functionality; refactored import functionality; added damage types and spell schools

--- a/website/templates/background.html
+++ b/website/templates/background.html
@@ -15,9 +15,9 @@
         {% endfor %}
         {% if cruleset.userid == current_user.id %}
         <div class="interior flex horizontal center">
-            <a href="{{ url_for('epchar.background', ruleset=cruleset.identifier) }}"><button type="button">Duplicate {{ background.name }}</button></a>
-            <a href="{{ url_for('epchar.editBackground', tbackground=background.name, ruleset=cruleset.identifier) }}"><button type="button">Edit {{ background.name }}</button></a>
-            <a href="{{ url_for('epchar.deleteBackground', tbackground=background.name, ruleset=cruleset.identifier) }}"><button type="button" class="mild danger">Delete {{ background.name }}</button></a>
+            <a href="{{ url_for('epchar.duplicateBackground', background=background.name, ruleset=cruleset.identifier) }}"><button type="button">Duplicate {{ background.name }}</button></a>
+            <a href="{{ url_for('epchar.editBackground', background=background.name, ruleset=cruleset.identifier) }}"><button type="button">Edit {{ background.name }}</button></a>
+            <a href="{{ url_for('epchar.deleteBackground', background=background.name, ruleset=cruleset.identifier) }}"><button type="button" class="mild danger">Delete {{ background.name }}</button></a>
         </div>
         {% endif %}
     </div>
