--- a/website/templates/create-race.html
+++ b/website/templates/create-race.html
@@ -124,7 +124,7 @@
 								type="number" 
 								id="weight_num" 
 								name="weight_num"
-								x-model="weight_die"
+								x-model="weight_num"
 								{% if race and race.weight_num %} x-init="weight_num={{ race.weight_num }}" {% endif %}>
 							<h6>d</h6>
 							<input 
