--- a/website/templates/races.html
+++ b/website/templates/races.html
@@ -54,12 +54,13 @@
 				</tr>
 			</template>
 		</table>
-		{% if cruleset.userid == current_user.id %}
 		<div class="interior flex horizontal center">
+			{% if cruleset.userid == current_user.id %}
 			<a href="{{ url_for('epchar.createRace', ruleset=cruleset.identifier) }}"><button>Create A Race</button></a>
 			<a href="{{ url_for('epchar.importRaces', ruleset=cruleset.identifier) }}"><button>Import from JSON</button></a>
+			{% endif %}
+			<a href="{{ url_for('epchar.exportRaces', ruleset=cruleset.identifier) }}" download><button>Download all as JSON</button></a>
 		</div>
-		{% endif %}
 	</div>
 </div>
 {% endblock %}
