--- a/website/templates/actions.html
+++ b/website/templates/actions.html
@@ -25,8 +25,11 @@
 		</div>
 		{% endfor %}
 		<div class="interior flex horizontal center">
+			{% if current_user.id == cruleset.userid %}
 			<a href="{{ url_for('eprefs.createAction', ruleset=cruleset.identifier) }}"><button>Create Action</button></a>
 			<a href="{{ url_for('eprefs.importActions', ruleset=cruleset.identifier) }}"><button>Import from JSON</button></a>
+			{% endif %}
+			<a href="{{ url_for('eprefs.exportActions', ruleset=cruleset.identifier) }}" download><button>Download all as JSON</button></a>
 		</div>
 	</div>
 </div>
