--- a/website/templates/feats.html
+++ b/website/templates/feats.html
@@ -33,12 +33,13 @@
 				</tr>
 			</template>
 		</table>
-		{% if cruleset.userid == current_user.id %}
 		<div class="interior flex horizontal center">
+			{% if cruleset.userid == current_user.id %}
 			<a href="{{ url_for('epchar.createFeat', ruleset=cruleset.identifier) }}"><button>Create A Feat</button></a>
 			<a href="{{ url_for('epchar.importFeats', ruleset=cruleset.identifier) }}"><button>Import from JSON</button></a>
+			{% endif %}
+			<a href="{{ url_for('epchar.exportFeats', ruleset=cruleset.identifier) }}"><button>Download all as JSON</button></a>
 		</div>
-		{% endif %}
 	</div>
 </div>
 {% endblock %}
